--- a/EA-FC-25.html
+++ b/EA-FC-25.html
@@ -72,7 +72,7 @@
             <span></span>
             <span></span>
             <span></span>
-            <span id="3">3-4-4</span>
+            <span id="btnFor">3-4-4</span>
             </button>
 
             
