--- a/EA-FC-25.html
+++ b/EA-FC-25.html
@@ -25,42 +25,42 @@
             <div class="kartscroll" >
                 <div class="kart">
                     <img src="/images/35.png">
-                    <h1>Abdelilah</h1>
+                    <h1>Bounou</h1>
                     <p>Position : GK</p>
                 </div>
                 <div class="kart">
                     <img src="/images/36.png">
-                    <h1>Abdelilah</h1>
+                    <h1>Vandijk</h1>
                     <p>Position : GK</p>
                 </div>
                 <div class="kart">
                     <img src="/images/37.png">
-                    <h1>Abdelilah</h1>
+                    <h1>Arnold</h1>
                     <p>Position : GK</p>
                 </div>
                 <div class="kart">
                     <img src="/images/38.png">
-                    <h1>Abdelilah</h1>
+                    <h1>Davies</h1>
                     <p>Position : GK</p>
                 </div>
                 <div class="kart">
                     <img src="/images/39.png">
-                    <h1>Abdelilah</h1>
+                    <h1>Vandijk</h1>
                     <p>Position : GK</p>
                 </div>
                 <div class="kart">
                     <img src="/images/40.png">
-                    <h1>Abdelilah</h1>
+                    <h1>Cristiano</h1>
                     <p>Position : GK</p>
                 </div>
                 <div class="kart">
                     <img src="/images/42.png">
-                    <h1>Abdelilah</h1>
+                    <h1>Naymar</h1>
                     <p>Position : GK</p>
                 </div>
                 <div class="kart">
                     <img src="/images/43.png">
-                    <h1>Abdelilah</h1>
+                    <h1>Mbappé</h1>
                     <p>Position : GK</p>
                 </div>
             </div>      
@@ -84,57 +84,57 @@
 
         <section id="GK">
             <img src="/images/24.png">
-            <h1>Abdelilah</h1>
+            <h1>Rudiger</h1>
             <p>Position : GK</p>
         </section>
         <section id="CBL">
             <img src="/images/25.png">
-            <h1>Abdelilah</h1>
+            <h1>Marcello</h1>
             <p>Position : CB</p>
         </section>
         <section id="CBR">
             <img src="/images/26.png">
-            <h1>Abdelilah</h1>
+            <h1>Alponso</h1>
             <p>Position : CB</p>
         </section>
         <section id="LB">
             <img src="/images/27.png">
-            <h1>Abdelilah</h1>
+            <h1>Kimmich</h1>
             <p>Position : LB</p>
         </section>
         <section id="RB">
             <img src="/images/28.png">
-            <h1>Abdelilah</h1>
+            <h1>Modeic</h1>
             <p>Position : RB</p>
         </section>
         <section id="DM">
             <img src="/images/29.png">
-            <h1>Abdelilah</h1>
+            <h1>Diaz</h1>
             <p>Position : DM</p>
         </section>
         <section id="CML">
             <img src="/images/30.png">
-            <h1>Abdelilah</h1>
+            <h1>Benzema</h1>
             <p>Position : CM</p>
         </section>
         <section id="CMR">
             <img src="/images/31.png">
-            <h1>Abdelilah</h1>
+            <h1>Haaland</h1>
             <p>Position : CM</p>
         </section>
         <section id="LW">
             <img src="/images/32.png">
-            <h1>Abdelilah</h1>
+            <h1>Fernandes</h1>
             <p>Position : LW</p>
         </section>
         <section id="RW">
             <img src="/images/33.png">
-            <h1>Abdelilah</h1>
+            <h1>Sancho</h1>
             <p>Position : RW</p>
         </section>
         <section id="ST">
             <img src="/images/34.png">
-            <h1>Abdelilah</h1>
+            <h1>Kanté</h1>
             <p>Position : ST</p>
         </section>
 
@@ -142,6 +142,9 @@
 
 
 <script src="/EA-FC-25.js"></script>
+
+
+
 
 </body>
 
